name: react-flux-mui
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ppbogdan@gmail.com
category: Web
author: Piotr Bogdan
extra-source-files:
    ChangeLog.md

library
    exposed-modules:
        React.Flux.Mui
        React.Flux.Mui.AppBar
        React.Flux.Mui.AutoComplete
        React.Flux.Mui.Avatar
        React.Flux.Mui.Badge
        React.Flux.Mui.BottomNavigation
        React.Flux.Mui.BottomNavigation.BottomNavigationItem
        React.Flux.Mui.Card
        React.Flux.Mui.Card.CardActions
        React.Flux.Mui.Card.CardExpandable
        React.Flux.Mui.Card.CardHeader
        React.Flux.Mui.Card.CardMedia
        React.Flux.Mui.Card.CardText
        React.Flux.Mui.Card.CardTitle
        React.Flux.Mui.Checkbox
        React.Flux.Mui.Chip
        React.Flux.Mui.CircularProgress
        React.Flux.Mui.DatePicker
        React.Flux.Mui.Dialog
        React.Flux.Mui.Divider
        React.Flux.Mui.Drawer
        React.Flux.Mui.DropDownMenu
        React.Flux.Mui.FlatButton
        React.Flux.Mui.FloatingActionButton
        React.Flux.Mui.FontIcon
        React.Flux.Mui.GridList
        React.Flux.Mui.GridList.GridTile
        React.Flux.Mui.IconButton
        React.Flux.Mui.IconMenu
        React.Flux.Mui.LinearProgress
        React.Flux.Mui.List
        React.Flux.Mui.List.ListItem
        React.Flux.Mui.Menu
        React.Flux.Mui.MenuItem
        React.Flux.Mui.Paper
        React.Flux.Mui.Popover
        React.Flux.Mui.Popover.PopoverAnimationVertical
        React.Flux.Mui.RadioButton
        React.Flux.Mui.RadioButton.RadioButtonGroup
        React.Flux.Mui.RaisedButton
        React.Flux.Mui.RefreshIndicator
        React.Flux.Mui.SelectField
        React.Flux.Mui.Slider
        React.Flux.Mui.Snackbar
        React.Flux.Mui.Stepper
        React.Flux.Mui.Stepper.Step
        React.Flux.Mui.Stepper.StepButton
        React.Flux.Mui.Stepper.StepContent
        React.Flux.Mui.Stepper.StepLabel
        React.Flux.Mui.Styles.MuiThemeProvider
        React.Flux.Mui.Subheader
        React.Flux.Mui.SvgIcon
        React.Flux.Mui.Table
        React.Flux.Mui.Table.TableBody
        React.Flux.Mui.Table.TableFooter
        React.Flux.Mui.Table.TableHeader
        React.Flux.Mui.Table.TableHeaderColumn
        React.Flux.Mui.Table.TableRow
        React.Flux.Mui.Table.TableRowColumn
        React.Flux.Mui.Tabs
        React.Flux.Mui.Tabs.Tab
        React.Flux.Mui.TextField
        React.Flux.Mui.TimePicker
        React.Flux.Mui.Toggle
        React.Flux.Mui.Toolbar
        React.Flux.Mui.Toolbar.ToolbarGroup
        React.Flux.Mui.Toolbar.ToolbarSeparator
        React.Flux.Mui.Toolbar.ToolbarTitle
        React.Flux.Mui.Types
        React.Flux.Mui.Util
    build-depends:
        base >=4.9 && <4.10,
        protolude -any,
        react-flux,
        aeson,
        aeson-casing,
        unordered-containers
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
    default-extensions: OverloadedStrings NoImplicitPrelude

